kubernetes/keycloak/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "keycloak"
  labels:
    app.kubernetes.io/component: "keycloak"
spec:
  replicas: 2
  revisionHistoryLimit: 2
  serviceName: "keycloak-headless"
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: "keycloak"
  template:
    metadata:
      labels:
        app.kubernetes.io/component: "keycloak"
    spec:
      serviceAccountName: "keycloak"
      automountServiceAccountToken: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/component: "keycloak"
              topologyKey: "kubernetes.io/hostname"
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: "keycloak"
                topologyKey: "topology.kubernetes.io/zone"
              weight: 1
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []

      containers:
        - name: keycloak
          image: keycloak/keycloak
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: discovery
              containerPort: 7800
            - name: management
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: "/health/ready"
              port: "management"
              scheme: "HTTPS"
            initialDelaySeconds: 10
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: "/health/live"
              port: "management"
              scheme: "HTTPS"
            initialDelaySeconds: 0
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: "/health"
              port: "management"
              scheme: "HTTPS"
            initialDelaySeconds: 15
            timeoutSeconds: 1
            failureThreshold: 60
            periodSeconds: 5
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 2Gi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/keycloak/lib/quarkus
              subPath: app-quarkus-dir
            - name: empty-dir
              mountPath: /opt/keycloak/data/tmp
              subPath: data-tmp
            - name: certificates
              mountPath: /etc/keycloak-certs
              readOnly: true
            # - name: ispn-config
            #   mountPath: "/opt/keycloak/conf/ispn-config"
            #   readOnly: true
            - name: empty-dir
              mountPath: /opt/keycloak/data
              subPath: keycloak-data

      volumes:
        - name: empty-dir
          emptyDir: {}
        # - name: ispn-config
        #   configMap:
        #     name: keycloak-ispn-config
        - name: certificates
          secret:
            secretName: keycloak-cert-prod
