kubernetes/keycloak/base/service-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: "keycloak"
  labels:
    app.kubernetes.io/component: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: keycloak
