kubernetes/keycloak/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "keycloak"
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: "keycloak"
      http:
        paths:
          - backend:
              service:
                name: "keycloak"
                port:
                  name: "https"
            path: "/"
            pathType: "Prefix"
  tls:
    - hosts:
        - "keycloak"
      secretName: "keycloak-cert-prod"
